tests/fixtures/rbi_own_proto.out
error: Could not match types:

        @ (builtin stdlib):722
    722 |    def +(String other) => String; end
                   ^^^^^^ String, with:
        @ __ROOT__/tests/fixtures/rbi_own_proto.rb:4
      4 |    x + 1
                 ^ Integer
        @ __ROOT__/tests/fixtures/rbi_own_proto.rb:4
      4 |    x + 1
             ^^^^^ in this expression
